Bug 80596 - FILEOPEN DOC: sprmPDxcLeft1 (and other sprmPDxc* indent variants) not parsed on import
Summary: FILEOPEN DOC: sprmPDxcLeft1 (and other sprmPDxc* indent variants) not parsed ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: Other All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: BSA target:25.8.0 inReleaseNotes:25.8
Keywords: filter:doc
Depends on: 36709 163913
Blocks: CJK DOC Paragraph
  Show dependency treegraph
 
Reported: 2014-06-27 13:12 UTC by xzczd
Modified: 2025-05-20 14:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample (19.50 KB, application/msword)
2014-06-27 13:12 UTC, xzczd
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xzczd 2014-06-27 13:12:54 UTC
Created attachment 101865 [details]
Sample

Just open the attachment with LibreOffice and you'll see what happened. The expected formatting is displayed by the screenshot pasted inside the sample .
Operating System: Windows (other)
Version: 4.2.5.2 release
Comment 1 ign_christian 2014-06-27 18:21:38 UTC
Confirmed, wrong alignment in 3.5.7.2, 4.1.6.2, 4.2.5.2. 

But in 4.2.5.2 fonts do not correctly shown, only square characters. Should be another bug in 4.2.x.
 
WPS/Kingsoft 2013 shows perfectly correct.

Tested with Ubuntu 12.04 x86
Comment 2 QA Administrators 2015-07-18 17:44:10 UTC Comment hidden (noise)
Comment 3 xzczd 2015-10-10 06:15:55 UTC
The bug persists.
Operating System: Windows 10 64bit
Version: 5.0.2 for Windows x86_64
Comment 4 Xisco Faulí 2016-10-10 17:51:40 UTC
This is still reproducible in

Version: 5.3.0.0.alpha0+
Build ID: ae3ec79354f7b4967e736c6a4cd7c08fc52e2b7d
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 5 Xisco Faulí 2017-09-21 11:23:22 UTC
Still reproducible in

Version: 6.0.0.0.alpha0+
Build ID: 86f256596c8566e80993e1cf6035bc3534b6f816
CPU threads: 4; OS: Linux 4.10; UI render: GL; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 6 QA Administrators 2018-09-23 02:49:53 UTC Comment hidden (noise)
Comment 7 Roman Kuznetsov 2018-09-23 12:03:26 UTC
still repro in LO 6.1.2.1 on Windows 7
Comment 8 QA Administrators 2019-09-24 03:10:28 UTC Comment hidden (noise)
Comment 9 xzczd 2019-09-25 06:28:28 UTC
The bug persists.
Operating System: Windows 7 64bit
Version: 6.3.1.2 for Windows x86_64
Comment 10 QA Administrators 2021-09-25 03:39:54 UTC Comment hidden (noise)
Comment 11 Faisal 2023-08-16 09:32:50 UTC
Still reproducible:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: qt6 (qfont+xcb)
Locale: en-GB (en_US.UTF-8); UI: en-US
7.5.5-1
Calc: threaded
Comment 12 Eyal Rozenberg 2024-08-26 09:04:23 UTC
(I think you meant to block the Chinese-Japanese-Korean layout & languages meta-bug.)
Comment 13 Jonathan Clark 2024-09-09 16:14:38 UTC
The sample document uses a combination of Ch unit first line indentation (sprmPDxcLeft1) and space characters for alignment. Writer does not implement the sprmPDxc* properties, so it falls back to the sprmPDxa* values (which are included in the doc, but are only correct for the lines that do not begin with whitespace).

In order to display this document correctly, Writer must support a font-relative ch unit for indentation (bug 36709). The doc import filter must then be updated to handle the sprmPDxc* properties, which should override the corresponding sprmPDxa* properties.
Comment 14 Commit Notification 2025-03-13 04:00:53 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a7660251c9b584e9b58340d08ade3da96cb2f2c

tdf#80596 DOC import: implement Ch-based LR indentation

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Jonathan Clark 2025-03-13 04:08:08 UTC
Note to verifier: the sample document attached demonstrates two separate bugs.

This bug tracks implementing the sprmPDxc* indentation attributes. To verify this bug, please inspect paragraph properties in the sample document to confirm that the first line indentation is expressed in "ic" units, rather than inches or cm.

The sample document also exhibits bug 88908. Microsoft Word has a feature which forces the width of a normal space to 1/2 the width of a full-width CJK character. At time of writing, we do not emulate this behavior. The layout of the sample document will not appear correct until bug 88908 is also fixed.