tdf#80596 DOC import: implement Ch-based LR indentation

Adds support for the sprmPDxcLeft, sprmPDxcLeft1, and sprmPDxcRight
attributes, which are used for character-based indentation in CJK
documents.

Change-Id: I374f3a85b7163799ca78a4c5bb856da3adb0a945
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182850
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>