sw/qa/extras/ww8export/ww8export4.cxx
@@ -634,6 +634,29 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf54862)
     verify();
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf83844)
+{
+    createSwDoc("tdf83844.fodt");
+
+    auto fnVerify = [this]
+    {
+        auto pXmlDoc = parseLayoutDump();
+
+        assertXPath(pXmlDoc, "/root/page/body/txt/SwParaPortion/SwLineLayout[1]", "portion",
+                    u"A A A A ");
+        assertXPath(pXmlDoc, "/root/page/body/txt/SwParaPortion/SwLineLayout[2]", "portion",
+                    u"B B B B B B B B ");
+        assertXPath(pXmlDoc, "/root/page/body/txt/SwParaPortion/SwLineLayout[3]", "portion",
+                    u"C C C C C C C C ");
+        assertXPath(pXmlDoc, "/root/page/body/txt/SwParaPortion/SwLineLayout[4]", "portion",
+                    u"D D D D");
+    };
+
+    fnVerify();
+    saveAndReload(mpFilter);
+    fnVerify();
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
